--- a/projects/motor_control/main/CMakeLists.txt
+++ b/projects/motor_control/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "motor_control.c"
                     INCLUDE_DIRS "."
-                    REQUIRES "l298n")
+                    REQUIRES "l298n console")
